
IF (${NNT_BUILD_KERNEL})

  ADD_SUBDIRECTORY (Core)
  ADD_SUBDIRECTORY (TL)
  ADD_SUBDIRECTORY (Kernel)

ENDIF ()

IF (${NNT_BUILD_LIBRARY})

  ADD_SUBDIRECTORY (Core)
  ADD_SUBDIRECTORY (TL)
  ADD_SUBDIRECTORY (Cross)
  ADD_SUBDIRECTORY (Security)
  ADD_SUBDIRECTORY (Store)
  ADD_SUBDIRECTORY (Parser)
  ADD_SUBDIRECTORY (Mach)

  # contrib
  ADD_SUBDIRECTORY ("../contrib" "contrib")

ENDIF ()
