
NNT_USE_LIBHEADERS ()

IF (${NNT_BUILD_KERNEL})

  NNT_USE_KERNELHEADERS ()

  SOURCE (Object.cpp)
  SOURCE (Task+NNT.cpp)
  SOURCE (File+NNT.cpp)

  NNT_KERNEL_CFLAGS()
  ADD_DEFINITIONS (${NNT_KERNEL_C_PREPROCESSORS})
  ADD_LIBRARY (NntCore STATIC ${CURRENT_SOURCES})
  INSTALL (TARGETS NntCore ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Build)

ENDIF ()

IF (${NNT_BUILD_LIBRARY})

  SOURCE (App.cpp)
  SOURCE (Core.cpp)
  SOURCE (ObjectDL.cpp)
  SOURCE (Char+NNT.cpp)
  SOURCE (Directory+NNT.cpp)
  SOURCE (Task+NNT.cpp)
  SOURCE (Time+NNT.cpp)
  SOURCE (UnitTest.cpp)
  SOURCE (Object.cpp)

  ADD_LIBRARY (NntCore STATIC ${CURRENT_SOURCES})

ENDIF ()

