
NNT_USE_LIBHEADERS ()

IF (${NNT_BUILD_KERNEL})

  SOURCE (DriverApp.cpp)
  SOURCE (DriverObject.cpp)
  SOURCE (DriverFeature.cpp)

  ADD_DEFINITIONS (${NNT_KERNEL_C_PREPROCESSORS})
  ADD_LIBRARY (NntKernel STATIC ${CURRENT_SOURCES})
  INSTALL (TARGETS NntKernel ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Build)

ENDIF ()

IF (${NNT_BUILD_LIBRARY})

  SOURCE (DriverApp.cpp)
  SOURCE (DriverObject.cpp)
  SOURCE (DriverFeature.cpp)

  ADD_LIBRARY (NntKernel STATIC ${CURRENT_SOURCES})

ENDIF ()
