
NNT_USE_LIBHEADERS ()

IF (${NNT_BUILD_KERNEL})

  NNT_USE_KERNELHEADERS ()
  
  SOURCE (klinux.c)
  SOURCE (klinux.cpp)
  
  NNT_KERNEL_CFLAGS ()
  ADD_DEFINITIONS (${NNT_KERNEL_C_PREPROCESSORS})
  ADD_LIBRARY (NntMach STATIC ${CURRENT_SOURCES})
  INSTALL (TARGETS NntMach ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Build)

ENDIF ()

IF (${NNT_BUILD_LIBRARY})

  INCLUDE (NNTYasm)

  SOURCE (cpu.cpp)
  SOURCEYASM (cpu_.s)

  ADD_LIBRARY (NntMach STATIC ${CURRENT_SOURCES})

ENDIF ()
