
NNT_USE_LIBHEADERS ()

IF (${NNT_BUILD_KERNEL})

  NNT_USE_KERNELHEADERS ()

  SOURCE (Allocate+NNT.cpp)
  SOURCE (Memory+NNT.cpp)
  SOURCE (String+NNT.cpp)
  SOURCE (URL+NNT.cpp)
  SOURCE (Data+NNT.cpp)

  NNT_KERNEL_CFLAGS ()
  ADD_DEFINITIONS (${NNT_KERNEL_C_PREPROCESSORS})
  ADD_LIBRARY (NntTl STATIC ${CURRENT_SOURCES})
  INSTALL (TARGETS NntTl ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Build)

ENDIF ()

IF (${NNT_BUILD_LIBRARY})

  SOURCE (Algorithm+NNT.cpp)
  SOURCE (String+NNT.cpp)
  SOURCE (Regex+NNT.cpp)
  SOURCE (Variant+NNT.cpp)

  SOURCESUB ("hardware/Assembly+NNT.cpp")
  SOURCESUB ("hardware/Cpu+NNT.cpp")
  SOURCESUB ("hardware/Device+NNT.cpp")
  SOURCESUB ("hardware/Hardware+NNT.cpp")

  ADD_LIBRARY (NntTl STATIC ${CURRENT_SOURCES})

ENDIF ()
